--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="main" id="main">
       <div class="content">
-        <h2>Hello, I'm<br /><span>Shalin Tilva</span></h2>
+        <h2>Hello, I'm<br /><span>Vatsal Jadav</span></h2>
         <div class="animated-text">
           <h3>Web Designer</h3>
           <h3>Web Developer</h3>
