--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="column col-right reveal">
           <h2 class="content-title">Hey There! I'm Vatsal Jadav</h2>
           <p class="paragraph-text">
-            Hi I'm Vatsal Jadav and I was bom in India. I have finished my
+            Hi I'm Vatsal Jadav and I was born in India. I have finished my
             primary schooling and higher schooling from Shree Swaminrayan
             Gurukul-Junagadh Then, I move to Changa for my Under graduation in
             Information and technology. I am passionate about new technology. I
