--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
           <h2 class="content-title">Hey There! I'm Vatsal Jadav</h2>
           <p class="paragraph-text">
             Hi I'm Vatsal Jadav and I was born in India. I have finished my
-            primary schooling and higher schooling from Shree Swaminrayan
+            primary and higher education from Shree Swaminrayan
             Gurukul-Junagadh Then, I move to Changa for my Under graduation in
-            Information and technology. I am passionate about new technology. I
-            enjoy spending time outdoors, discovering new food, also i ama
+            Computer Science Engineering. I enjoy spending time outdoors, discovering new food, also I am a
             person who loves to play games.
           </p>
           <a href="#" class="btn">See More</a>
